# workmate-test

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  ruff.toml
core/: read_file.py
reports/: average.py  make_report.py
tests/: test_average_edgecases.py  test_cli_errors.py  test_read_file.py  test_reports_integration.py  test_utils.py
tests/expected/: average.txt  avg-date.txt  default-date.txt  default.txt
workmate/: workmate.py
workmate/core/: read_file.py  utils.py
workmate/reports/: __init__.py  average.py  default.py
